--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,8 @@ services:
       - POSTGRES_DB=hotel_management_app
       - POSTGRES_USER=testuser
       - POSTGRES_PASSWORD=root
+    depends_on:
+      - client        
 volumes:
   pg_data:
   
